[gd_scene load_steps=10 format=3 uid="uid://bfi52tkt1aasw"]

[ext_resource type="Script" path="res://Arquebusier/Arquebusier.gd" id="1_c6voo"]
[ext_resource type="Script" path="res://Arquebusier/ArquebusierBullet.gd" id="2_7gs81"]
[ext_resource type="PackedScene" uid="uid://m8u23myrom62" path="res://@Commons/GLB/arquebus.glb" id="2_dpsyp"]
[ext_resource type="PackedScene" uid="uid://cub1uy7ivf4lf" path="res://@Commons/Blend/EnemigoInf.blend" id="2_o7lda"]
[ext_resource type="PackedScene" uid="uid://bnhigd2wme6oh" path="res://@Commons/Blend/EnemigoSup.blend" id="3_bwuog"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yctua"]
radius = 0.25

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_safmi"]
length = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dnuel"]
albedo_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ax5gy"]
radius = 0.1
height = 0.2
radial_segments = 4
rings = 1

[node name="Arquebusier" type="CharacterBody3D" groups=["Enemy"]]
wall_min_slide_angle = 0.0
script = ExtResource("1_c6voo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_yctua")

[node name="LowBody" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="ClimbRay" type="RayCast3D" parent="LowBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, 0.5)

[node name="EnemigoInf" parent="LowBody" instance=ExtResource("2_o7lda")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="HighBody" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02226, 0)

[node name="EnemigoSup" parent="HighBody" instance=ExtResource("3_bwuog")]

[node name="MeshGun" type="Node3D" parent="HighBody"]
transform = Transform3D(1, 3.11218e-12, 0, 2.67164e-12, 1, 3.49246e-10, 8.73115e-11, 0, 1, -0.258, 0.422, 0.828)

[node name="arquebus" parent="HighBody/MeshGun" instance=ExtResource("2_dpsyp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 1.20189e-18, 1, 0, -4.37114e-08, 0, 0, -0.140223)

[node name="NecessaryNode" type="Node" parent="HighBody/MeshGun"]
editor_description = "Este nodo es necesario para que la bala funcione globalmente y no con la posici√≥n inherit"

[node name="Bullet" type="Area3D" parent="HighBody/MeshGun/NecessaryNode"]
transform = Transform3D(1, 3.11218e-12, 0, 2.67164e-12, 1, 3.49246e-10, 8.73115e-11, 0, 1, -0.257565, 1.43977, 0.762815)
visible = false
script = ExtResource("2_7gs81")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HighBody/MeshGun/NecessaryNode/Bullet"]
shape = SubResource("SeparationRayShape3D_safmi")

[node name="MeshBullet" type="MeshInstance3D" parent="HighBody/MeshGun/NecessaryNode/Bullet"]
transform = Transform3D(1, 0, 0, -3.04932e-20, 1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_dnuel")
mesh = SubResource("SphereMesh_ax5gy")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
